@@ -2990,196 +2990,6 @@ void G_EntitySoundNoCut(
 		(int)ent->s.pos.trBase[0], (int)ent->s.pos.trBase[1], (int)ent->s.pos.trBase[2] ));
 }
 
-char *G_ShortcutSanitize(char *text)
-{
-	// pheno: increased 'n' for [command] command line
-	static char n[MAX_STRING_CHARS] = {""};
-
-	if(!text || !*text)
-		return n;
-
-	Q_strncpyz(n, text, sizeof(n));
-
-	Q_strncpyz(n, Q_StrReplace(n, "[a]", "(a)"), sizeof(n));
-	Q_strncpyz(n, Q_StrReplace(n, "[d]", "(d)"), sizeof(n));
-	Q_strncpyz(n, Q_StrReplace(n, "[g]", "(g)"), sizeof(n));
-	Q_strncpyz(n, Q_StrReplace(n, "[h]", "(h)"), sizeof(n));
-	Q_strncpyz(n, Q_StrReplace(n, "[k]", "(k)"), sizeof(n));
-	Q_strncpyz(n, Q_StrReplace(n, "[l]", "(l)"), sizeof(n));
-	Q_strncpyz(n, Q_StrReplace(n, "[n]", "(n)"), sizeof(n));
-	Q_strncpyz(n, Q_StrReplace(n, "[r]", "(r)"), sizeof(n));
-	Q_strncpyz(n, Q_StrReplace(n, "[p]", "(p)"), sizeof(n));
-	Q_strncpyz(n, Q_StrReplace(n, "[s]", "(s)"), sizeof(n));
-	Q_strncpyz(n, Q_StrReplace(n, "[w]", "(w)"), sizeof(n));
-	Q_strncpyz(n, Q_StrReplace(n, "[t]", "(t)"), sizeof(n));
-	return n;
-}
-
-char *G_Shortcuts(gentity_t *ent, char *text)
-{
-	// pheno: increased 'out' for [command] command line
-	static char out[MAX_STRING_CHARS];
-	char a[MAX_NAME_LENGTH] = {"*unknown*"};
-	char d[MAX_NAME_LENGTH] = {"*unknown*"};
-	char g[32+1] = {"*unknown*"};
-	char h[MAX_NAME_LENGTH] = {"*unknown*"};
-	char k[MAX_NAME_LENGTH] = {"*unknown*"};
-	char l[32] = {"*unknown*"};
-	char n[MAX_NAME_LENGTH] = {"*unknown*"};
-	char r[MAX_NAME_LENGTH] = {"*unknown*"};
-	char p[MAX_NAME_LENGTH] = {"*unknown*"};
-	char s[32] = {"*unknown*"};
-	char w[32] = {"*unknown*"};
-	char t[32] = {"*unknown*"};
-	char guid_short[9];
-	gclient_t *client = NULL;
-	gentity_t *crosshairEnt;
-	char *rep;
-	gitem_t *weapon;
-	int clip;
-	int ammo;
-	int i;
-
-	out[0] = '\0';
-
-	if (ent) {
-		if(ent->client->pers.lastammo_client != -1) {
-			client = &level.clients[ent->client->pers.lastammo_client];
-			if(client) {
-				Q_strncpyz(a,
-					G_ShortcutSanitize(client->pers.netname),
-					sizeof(a));
-			}
-		}
-	}
-
-	if (ent) {
-		if(ent->client->pers.lastkiller_client != -1) {
-			client = &level.clients[ent->client->pers.lastkiller_client];
-			if(client) {
-				Q_strncpyz(d,
-					G_ShortcutSanitize(client->pers.netname),
-					sizeof(d));
-			}
-		}
-	}
-
-	if (ent && ent->client) {
-		
-		for(i=0; i<=8; i++){
-			guid_short[i] = ent->client->sess.guid[i+24] ?
-				ent->client->sess.guid[i+24] : '\0';
-		}
-
-		Q_strncpyz(g,
-			guid_short,
-			sizeof(g));
-	}
-
-	if (ent) {
-		if(ent->client->pers.lasthealth_client != -1) {
-			client = &level.clients[ent->client->pers.lasthealth_client];
-			if(client) {
-				Q_strncpyz(h,
-					G_ShortcutSanitize(client->pers.netname),
-					sizeof(h));
-			}
-		}
-	}
-
-	if (ent) {
-		if(ent->client->pers.lastkilled_client != -1) {
-			client = &level.clients[ent->client->pers.lastkilled_client];
-			if(client) {
-				Q_strncpyz(k,
-					G_ShortcutSanitize(client->pers.netname),
-					sizeof(k));
-			}
-		}
-	}
-
-
-	if (ent) {
-		Q_strncpyz(l,
-			BG_GetLocationString(ent->client->ps.origin),
-			sizeof(l));
-	}
-
-	if (ent) {
-		Q_strncpyz(n,
-			G_ShortcutSanitize(ent->client->pers.netname),
-			sizeof(n));
-	}
-
-	if (ent) {
-		if(ent->client->pers.lastrevive_client != -1) {
-			client = &level.clients[ent->client->pers.lastrevive_client];
-			if(client) {
-				Q_strncpyz(r,
-					G_ShortcutSanitize(client->pers.netname),
-					sizeof(r));
-			}
-		}
-	}
-
-	if (ent) {
-		crosshairEnt = &g_entities[ent->client->ps.identifyClient];
-		// Dens: only give the name of the other client, if the player should be able to see it
-		if(crosshairEnt && crosshairEnt->client && crosshairEnt->inuse && 
-			(ent->client->sess.sessionTeam == crosshairEnt->client->sess.sessionTeam ||
-			crosshairEnt->client->ps.powerups[PW_OPS_DISGUISED] ||
-			ent->client->sess.sessionTeam == TEAM_SPECTATOR)) {
-			client = crosshairEnt->client;
-			if(client) {
-				// Dens: show the name of the owner of the suit
-				if(client->ps.powerups[PW_OPS_DISGUISED] &&
-					(ent->client->sess.sessionTeam != client->sess.sessionTeam)){
-					Q_strncpyz(p,
-						G_ShortcutSanitize(client->disguiseNetname),
-						sizeof(p));
-				} else {
-					Q_strncpyz(p,
-						G_ShortcutSanitize(client->pers.netname),
-						sizeof(p));
-				}
-			}
-		}
-	}
-
-	if (ent) {
-		Com_sprintf(s, sizeof(s), "%i", ent->health);
-	}
-
-	if (ent) {
-		weapon = BG_FindItemForWeapon(ent->client->ps.weapon);
-		Q_strncpyz(w, weapon->pickup_name, sizeof(w));
-	}
-
-	if (ent) {
-		clip = BG_FindClipForWeapon(ent->client->ps.weapon);
-		ammo = BG_FindAmmoForWeapon(ent->client->ps.weapon);
-		Com_sprintf(t, sizeof(t), "%i",
-			(ent->client->ps.ammoclip[clip] +
-			((ent->client->ps.weapon == WP_KNIFE) ? 0 : ent->client->ps.ammo[ammo])));
-	}
-
-	rep = Q_StrReplace(text, "[a]", a);
-	rep = Q_StrReplace(rep, "[d]", d);
-	rep = Q_StrReplace(rep, "[g]", g);
-	rep = Q_StrReplace(rep, "[h]", h);
-	rep = Q_StrReplace(rep, "[k]", k);
-	rep = Q_StrReplace(rep, "[l]", l);
-	rep = Q_StrReplace(rep, "[n]", n);
-	rep = Q_StrReplace(rep, "[r]", r);
-	rep = Q_StrReplace(rep, "[p]", p);
-	rep = Q_StrReplace(rep, "[s]", s);
-	rep = Q_StrReplace(rep, "[w]", w);
-	rep = Q_StrReplace(rep, "[t]", t);
-
-	Q_strncpyz(out, rep, sizeof(out));
-	return out;
-}
-
 /*
 ==================
 G_Say
@@ -3261,7 +3071,8 @@ void G_Say( gentity_t *ent, gentity_t *target, int mode, const char *chatText ) 
 	char		censoredText[MAX_SAY_TEXT];
 	qboolean	localize = qfalse;
 	char		*loc;
-	char		*shortcuts;
+	shortcut_t	shortcuts[MAX_SHORTCUTS];
+	char		*rep;
 
 	unescape_string( ( char * )chatText ); //mcwf
 
@@ -3277,9 +3088,10 @@ void G_Say( gentity_t *ent, gentity_t *target, int mode, const char *chatText ) 
 		}
 	}
 
-	if(g_shortcuts.integer) {
-		shortcuts = G_Shortcuts(ent, text);
-		Q_strncpyz(text, shortcuts, sizeof(text));
+	if (g_shortcuts.integer) {
+		G_Shortcuts(ent, shortcuts);
+		rep = G_ReplaceShortcuts(text, shortcuts, MAX_SHORTCUTS);
+		Q_strncpyz(text, rep, sizeof(text));
 	}
 
 	switch ( mode ) {
@@ -3393,6 +3205,8 @@ void G_VoiceTo( gentity_t *ent, gentity_t *other, int mode, const char *id, qboo
 	char *cmd;
 	char *space;
 	char text[MAX_SAY_TEXT]; // redeye
+	shortcut_t shortcuts[MAX_SHORTCUTS];
+	char *rep;
 
 	if (!other) {
 		return;
@@ -3437,10 +3251,10 @@ void G_VoiceTo( gentity_t *ent, gentity_t *other, int mode, const char *id, qboo
 	}
 
 	// redeye - replace shortcuts in customvoicechats
-	if(g_shortcuts.integer) {
-		char *shortcuts;
-		shortcuts = G_Shortcuts( ent, ( char * )id );
-		Q_strncpyz(text, shortcuts, sizeof(text));
+	if (g_shortcuts.integer) {
+		G_Shortcuts(ent, shortcuts);
+		rep = G_ReplaceShortcuts((char *)id, shortcuts, MAX_SHORTCUTS);
+		Q_strncpyz(text, rep, sizeof(text));
 	} else {
 		Q_strncpyz(text, id, sizeof(text));
 	}
