@@ -2143,3 +2143,5 @@
 * pheno:   fixed a bug where client wasn't moved to spectators if g_inactivityOptions
            flag '4' is set
 * pheno:   fixed a bug where a muted player could use the say_teamnl command
+* pheno:   fixed a bug where a player name was changed if it contains shortcut characters because
+           of multiple text replacement processing
